// ArtBridge Prisma Schema
// Source design: .moai/project/db/schema.md, erd.mmd
// Engine: PostgreSQL · ORM: Prisma · Single-schema (no multi-tenancy)
// Tables use snake_case physical names via @@map / @map.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

// ──────────────────────────────── Enums ────────────────────────────────

enum Role {
  FAN
  CREATOR
}

enum PostVisibility {
  PUBLIC
  MEMBER_ONLY
  PAID
}

enum PostStatus {
  DRAFT
  PUBLISHED
}

enum ProgramApplicationStatus {
  PENDING
  RESERVED
  PENDING_PAYMENT
  ACCEPTED
  REJECTED
  AUTO_REJECTED
  PAYMENT_FAILED
  CANCELLED
  REMOVED
}

// @MX:NOTE: Program lifecycle states. Transitions drive side-effects (notifications, auto-reject).
enum ProgramStatus {
  DRAFT
  RECRUITING
  CLOSED
  CONTRACTING
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  PAID
  RELEASED
  REFUNDED
  FAILED
}

enum SettlementStatus {
  PENDING
  AVAILABLE
  RELEASED
  ON_HOLD
  ADJUSTED
}

enum MembershipStatus {
  ACTIVE
  CANCELLED
  EXPIRED
  PAYMENT_FAILED
}

enum ArtworkStatus {
  DRAFT
  PUBLISHED
  RESERVED
  SOLD
  HIDDEN
}

enum ArtworkReservationStatus {
  ACTIVE
  EXPIRED
  CONVERTED
  CANCELLED
}

enum ArtworkOrderStatus {
  PENDING_PAYMENT
  PAID
  PREPARING
  SHIPPED
  DELIVERED
  RECEIVED
  CANCELLED
  REFUNDED
  ISSUE_OPENED
}

enum ArtworkIssueType {
  NOT_DELIVERED
  DAMAGED
  WRONG_ITEM
  NOT_AS_DESCRIBED
  REFUND_REQUEST
  OTHER
}

enum ArtworkIssueStatus {
  OPEN
  REVIEWING
  RESOLVED
  REJECTED
}

enum SettlementAdjustmentType {
  REFUND_DEDUCTION
  HOLD
  RELEASE
  MANUAL_ADJUSTMENT
}

enum CreatorPayoutBusinessType {
  PERSONAL
  SOLE_PROPRIETOR
  CORPORATION
}

enum PayoutVerificationStatus {
  PENDING_VERIFICATION
  VERIFIED
  NEEDS_REVIEW
}

// ──────────────────────────────── Models ────────────────────────────────

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  name          String
  role          Role      @default(FAN)
  // @MX:NOTE: SPEC-AUTH — Credentials 로그인용 해시. OAuth 가입자는 null.
  passwordHash  String?   @map("password_hash")
  emailVerified DateTime? @map("email_verified")
  image         String?
  createdAt     DateTime  @default(now()) @map("created_at")
  updatedAt     DateTime  @updatedAt @map("updated_at")

  creatorProfile      CreatorProfile?
  memberships         Membership[]
  applications        ProgramApplication[]
  notifications       Notification[]
  paymentsAsFan       Payment[]                     @relation("PaymentFan")
  artworkReservations ArtworkInventoryReservation[]
  artworkOrders       ArtworkOrder[]
  artworkIssues       ArtworkOrderIssue[]
  // @MX:NOTE: SPEC-013 — 상호 평가 양방향. reviewsAuthored(내가 쓴 리뷰) / reviewsReceived(내가 받은 리뷰).
  reviewsAuthored     Review[]                      @relation("ReviewReviewer")
  reviewsReceived     Review[]                      @relation("ReviewReviewee")
  communityPosts      CommunityPost[]
  bookmarks           Bookmark[]
  postLikes           PostLike[]
  postComments        PostComment[]
  // @MX:NOTE: SPEC-AUTH — Auth.js PrismaAdapter (Google OAuth 계정 연결).
  accounts            Account[]
  sessions            Session[]

  @@map("users")
}

// @MX:NOTE: SPEC-AUTH — Auth.js 어댑터 표준 모델. Google OAuth 연결 정보.
model Account {
  id                String  @id @default(cuid())
  userId            String  @map("user_id")
  type              String
  provider          String
  providerAccountId String  @map("provider_account_id")
  refresh_token     String? @map("refresh_token")
  access_token      String? @map("access_token")
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @map("id_token")
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

// @MX:NOTE: SPEC-AUTH — JWT 전략이라 사용하지 않으나 PrismaAdapter 타입 정합성을 위해 포함.
model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique @map("session_token")
  userId       String   @map("user_id")
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model CreatorProfile {
  id              String   @id @default(cuid())
  userId          String   @unique @map("user_id")
  studioName      String   @map("studio_name")
  bio             String?
  category        String?
  coverImageUrl   String?  @map("cover_image_url")
  profileImageUrl String?  @map("profile_image_url")
  instagramUrl    String?  @map("instagram_url")
  websiteUrl      String?
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  user           User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  plans          MembershipPlan[]
  posts          Post[]
  programs       Program[]
  communityPosts CommunityPost[]
  bookmarkedBy   Bookmark[]
  works          CreatorWork[]
  artworks       Artwork[]
  payoutAccount  CreatorPayoutAccount?

  @@map("creator_profiles")
}

model MembershipPlan {
  id               String   @id @default(cuid())
  creatorProfileId String   @map("creator_profile_id")
  title            String
  description      String?
  priceKrw         Int      @map("price_krw")
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")

  creatorProfile CreatorProfile @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)
  memberships    Membership[]

  @@index([creatorProfileId])
  @@map("membership_plans")
}

model Membership {
  id            String           @id @default(cuid())
  userId        String           @map("user_id")
  planId        String           @map("plan_id")
  status        MembershipStatus @default(ACTIVE)
  startedAt     DateTime         @default(now()) @map("started_at")
  expiresAt     DateTime?        @map("expires_at")
  cancelledAt   DateTime?        @map("cancelled_at")
  lastPaymentId String?          @map("last_payment_id")
  createdAt     DateTime         @default(now()) @map("created_at")
  updatedAt     DateTime         @updatedAt @map("updated_at")

  user     User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  plan     MembershipPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  payments Payment[]

  @@unique([userId, planId])
  @@index([planId])
  @@index([status, expiresAt])
  @@map("memberships")
}

model Post {
  id               String         @id @default(cuid())
  creatorProfileId String         @map("creator_profile_id")
  title            String
  body             String
  visibility       PostVisibility @default(PUBLIC)
  status           PostStatus     @default(PUBLISHED)
  priceKrw         Int?           @map("price_krw")
  createdAt        DateTime       @default(now()) @map("created_at")
  updatedAt        DateTime       @updatedAt @map("updated_at")

  creatorProfile CreatorProfile @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)
  payments       Payment[]
  likes          PostLike[]
  comments       PostComment[]

  @@index([creatorProfileId, createdAt])
  @@index([creatorProfileId, status, createdAt])
  @@map("posts")
}

model PostLike {
  id        String   @id @default(cuid())
  postId    String   @map("post_id")
  userId    String   @map("user_id")
  createdAt DateTime @default(now()) @map("created_at")

  post Post @relation(fields: [postId], references: [id], onDelete: Cascade)
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([postId, userId])
  @@index([userId])
  @@map("post_likes")
}

model PostComment {
  id        String   @id @default(cuid())
  postId    String   @map("post_id")
  authorId  String   @map("author_id")
  body      String
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  post   Post @relation(fields: [postId], references: [id], onDelete: Cascade)
  author User @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([postId, createdAt])
  @@index([authorId])
  @@map("post_comments")
}

model Program {
  id               String        @id @default(cuid())
  creatorProfileId String        @map("creator_profile_id")
  title            String
  description      String?
  category         String?
  priceKrw         Int           @default(0) @map("price_krw")
  startDate        DateTime?     @map("start_date")
  endDate          DateTime?     @map("end_date")
  recruitDeadline  DateTime?     @map("recruit_deadline")
  maxParticipants  Int?          @map("max_participants")
  status           ProgramStatus @default(RECRUITING)
  createdAt        DateTime      @default(now()) @map("created_at")
  updatedAt        DateTime      @updatedAt @map("updated_at")
  deletedAt        DateTime?     @map("deleted_at")

  creatorProfile CreatorProfile       @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)
  applications   ProgramApplication[]
  reviews        Review[]

  @@index([creatorProfileId])
  @@index([status])
  @@map("programs")
}

model ProgramApplication {
  id                   String                   @id @default(cuid())
  programId            String                   @map("program_id")
  userId               String                   @map("user_id")
  status               ProgramApplicationStatus @default(PENDING)
  message              String?
  portfolioUrl         String?                  @map("portfolio_url")
  // @MX:NOTE: SPEC-013 — 에스크로 참여 단위 시각. 납품 요청(크리에이터)→완료 승인(팬=지불자) 순서 강제.
  // deliveryRequestedAt != null 이어야만 완료 승인 가능(FR-007). completionApprovedAt 세팅 시 Payment/Settlement RELEASED.
  deliveryRequestedAt  DateTime?                @map("delivery_requested_at")
  completionApprovedAt DateTime?                @map("completion_approved_at")
  paymentExpiresAt     DateTime?                @map("payment_expires_at")
  paymentFailedAt      DateTime?                @map("payment_failed_at")
  cancelledAt          DateTime?                @map("cancelled_at")
  removedAt            DateTime?                @map("removed_at")
  removedReason        String?                  @map("removed_reason")
  createdAt            DateTime                 @default(now()) @map("created_at")
  updatedAt            DateTime                 @updatedAt @map("updated_at")

  program  Program   @relation(fields: [programId], references: [id], onDelete: Cascade)
  user     User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  contract Contract?
  payment  Payment?

  @@index([programId, status])
  @@index([userId])
  @@map("program_applications")
}

model Contract {
  id              String    @id @default(cuid())
  applicationId   String    @unique @map("application_id")
  terms           Json
  agreedAmount    Int       @default(0) @map("agreed_amount")
  fanSignedAt     DateTime? @map("fan_signed_at")
  creatorSignedAt DateTime? @map("creator_signed_at")
  createdAt       DateTime  @default(now()) @map("created_at")

  application ProgramApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  payments    Payment[]

  @@map("contracts")
}

model Payment {
  id                   String        @id @default(cuid())
  membershipId         String?       @map("membership_id")
  programApplicationId String?       @unique @map("program_application_id")
  artworkOrderId       String?       @unique @map("artwork_order_id")
  // SPEC-006 FR-008: 1계약 1결제 — DB 레벨 중복 결제 차단. nullable이므로
  // 멤버십 결제(contractId=null)는 Postgres가 다중 NULL을 허용해 영향 없음.
  contractId           String?       @unique @map("contract_id")
  // SPEC-009 안 A: PAID 포스트 단건 구매 슬롯. membershipId/contractId와 동일한
  // nullable 선택적 패턴. (membershipId, contractId, postId) 중 정확히 하나만 not null
  // (앱 레이어 제약 — FR-003). 중복 구매 방지는 애플리케이션 레벨 PAID 상태 체크(FR-005).
  // SPEC-015: programApplicationId/artworkOrderId 추가. 여러 nullable FK 중 정확히 하나만
  // 결제 원천으로 채우는 제약은 Prisma 앱 레이어에서 검증한다.
  postId               String?       @map("post_id")
  fanUserId            String        @map("fan_user_id")
  amount               Int
  feeKrw               Int           @default(0) @map("fee_krw")
  status               PaymentStatus @default(PENDING)
  // @MX:NOTE: SPEC-012 — PG sandbox 결제 추적 필드. provider("portone"|"toss"|"mock"),
  // providerTxId(PG 거래 고유 ID, 검증 응답으로 확정), merchantUid(앱 발급 주문번호, 결제창·콜백·검증 공통 대조).
  // 모두 nullable → 레거시 Mock 결제·멤버십/포스트 결제와 호환. merchantUid @unique(nullable 다중 NULL 허용).
  provider             String?       @map("provider")
  providerTxId         String?       @map("provider_tx_id")
  merchantUid          String?       @unique @map("merchant_uid")
  createdAt            DateTime      @default(now()) @map("created_at")
  updatedAt            DateTime      @updatedAt @map("updated_at")

  membership         Membership?         @relation(fields: [membershipId], references: [id], onDelete: SetNull)
  programApplication ProgramApplication? @relation(fields: [programApplicationId], references: [id], onDelete: SetNull)
  artworkOrder       ArtworkOrder?       @relation(fields: [artworkOrderId], references: [id], onDelete: SetNull)
  contract           Contract?           @relation(fields: [contractId], references: [id], onDelete: SetNull)
  post               Post?               @relation(fields: [postId], references: [id], onDelete: SetNull)
  fan                User                @relation("PaymentFan", fields: [fanUserId], references: [id], onDelete: Cascade)
  settlement         Settlement?

  @@index([status, createdAt])
  @@index([membershipId, fanUserId, status])
  @@index([programApplicationId, status])
  @@index([artworkOrderId, status])
  @@index([postId, fanUserId, status])
  @@map("payments")
}

model Settlement {
  id          String           @id @default(cuid())
  paymentId   String           @unique @map("payment_id")
  sourceType  String?          @map("source_type")
  sourceId    String?          @map("source_id")
  grossAmount Int              @default(0) @map("gross_amount")
  feeKrw      Int              @default(0) @map("fee_krw")
  payout      Int
  status      SettlementStatus @default(PENDING)
  availableAt DateTime?        @map("available_at")
  releasedAt  DateTime?        @map("released_at")
  heldReason  String?          @map("held_reason")
  createdAt   DateTime         @default(now()) @map("created_at")
  updatedAt   DateTime         @updatedAt @map("updated_at")

  payment     Payment                @relation(fields: [paymentId], references: [id], onDelete: Cascade)
  adjustments SettlementAdjustment[]

  @@index([sourceType, sourceId])
  @@index([status, availableAt])
  @@map("settlements")
}

model SettlementAdjustment {
  id           String                   @id @default(cuid())
  settlementId String                   @map("settlement_id")
  type         SettlementAdjustmentType
  amount       Int
  reason       String?
  createdAt    DateTime                 @default(now()) @map("created_at")

  settlement Settlement @relation(fields: [settlementId], references: [id], onDelete: Cascade)

  @@index([settlementId, type])
  @@map("settlement_adjustments")
}

model CreatorPayoutAccount {
  id                     String                     @id @default(cuid())
  creatorProfileId       String                     @unique @map("creator_profile_id")
  businessType           CreatorPayoutBusinessType  @default(PERSONAL) @map("business_type")
  bankName               String                     @map("bank_name")
  accountHolder          String                     @map("account_holder")
  accountNumberMasked    String                     @map("account_number_masked")
  accountNumberLast4     String                     @map("account_number_last4")
  businessRegistrationNo String?                    @map("business_registration_no")
  verificationStatus     PayoutVerificationStatus   @default(PENDING_VERIFICATION) @map("verification_status")
  submittedAt            DateTime                   @default(now()) @map("submitted_at")
  verifiedAt             DateTime?                  @map("verified_at")
  createdAt              DateTime                   @default(now()) @map("created_at")
  updatedAt              DateTime                   @updatedAt @map("updated_at")

  creatorProfile CreatorProfile @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)

  @@index([verificationStatus])
  @@map("creator_payout_accounts")
}

model CreatorWork {
  id               String    @id @default(cuid())
  creatorProfileId String    @map("creator_profile_id")
  title            String
  kind             String?
  description      String?
  imageUrl         String?   @map("image_url")
  externalUrl      String?   @map("external_url")
  startedAt        DateTime? @map("started_at")
  endedAt          DateTime? @map("ended_at")
  createdAt        DateTime  @default(now()) @map("created_at")
  updatedAt        DateTime  @updatedAt @map("updated_at")

  creatorProfile CreatorProfile @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)

  @@index([creatorProfileId, startedAt])
  @@map("creator_works")
}

model Artwork {
  id               String        @id @default(cuid())
  creatorProfileId String        @map("creator_profile_id")
  title            String
  description      String?
  imageUrl         String?       @map("image_url")
  priceKrw         Int           @map("price_krw")
  stock            Int           @default(1)
  status           ArtworkStatus @default(DRAFT)
  createdAt        DateTime      @default(now()) @map("created_at")
  updatedAt        DateTime      @updatedAt @map("updated_at")

  creatorProfile CreatorProfile                @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)
  reservations   ArtworkInventoryReservation[]
  orders         ArtworkOrder[]

  @@index([creatorProfileId, status, createdAt])
  @@map("artworks")
}

model ArtworkInventoryReservation {
  id        String                   @id @default(cuid())
  artworkId String                   @map("artwork_id")
  userId    String                   @map("user_id")
  status    ArtworkReservationStatus @default(ACTIVE)
  expiresAt DateTime                 @map("expires_at")
  createdAt DateTime                 @default(now()) @map("created_at")
  updatedAt DateTime                 @updatedAt @map("updated_at")

  artwork Artwork @relation(fields: [artworkId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([artworkId, status, expiresAt])
  @@index([userId, status])
  @@map("artwork_inventory_reservations")
}

model ArtworkOrder {
  id              String             @id @default(cuid())
  artworkId       String             @map("artwork_id")
  fanUserId       String             @map("fan_user_id")
  status          ArtworkOrderStatus @default(PENDING_PAYMENT)
  recipientName   String             @map("recipient_name")
  recipientPhone  String             @map("recipient_phone")
  shippingAddress String             @map("shipping_address")
  shippingMemo    String?            @map("shipping_memo")
  itemAmount      Int                @map("item_amount")
  shippingFeeKrw  Int                @default(0) @map("shipping_fee_krw")
  totalAmount     Int                @map("total_amount")
  paidAt          DateTime?          @map("paid_at")
  cancelledAt     DateTime?          @map("cancelled_at")
  refundReason    String?            @map("refund_reason")
  receivedAt      DateTime?          @map("received_at")
  createdAt       DateTime           @default(now()) @map("created_at")
  updatedAt       DateTime           @updatedAt @map("updated_at")

  artwork  Artwork             @relation(fields: [artworkId], references: [id], onDelete: Restrict)
  fan      User                @relation(fields: [fanUserId], references: [id], onDelete: Cascade)
  payment  Payment?
  shipment ArtworkShipment?
  issues   ArtworkOrderIssue[]

  @@index([fanUserId, status, createdAt])
  @@index([artworkId, status])
  @@map("artwork_orders")
}

model ArtworkShipment {
  id          String    @id @default(cuid())
  orderId     String    @unique @map("order_id")
  carrier     String
  trackingNo  String    @map("tracking_no")
  shippedAt   DateTime? @map("shipped_at")
  deliveredAt DateTime? @map("delivered_at")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  order ArtworkOrder @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([trackingNo])
  @@map("artwork_shipments")
}

model ArtworkOrderIssue {
  id         String             @id @default(cuid())
  orderId    String             @map("order_id")
  userId     String             @map("user_id")
  type       ArtworkIssueType
  status     ArtworkIssueStatus @default(OPEN)
  message    String
  imageUrl   String?            @map("image_url")
  resolvedAt DateTime?          @map("resolved_at")
  createdAt  DateTime           @default(now()) @map("created_at")
  updatedAt  DateTime           @updatedAt @map("updated_at")

  order ArtworkOrder @relation(fields: [orderId], references: [id], onDelete: Cascade)
  user  User         @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([orderId, status])
  @@index([userId, createdAt])
  @@map("artwork_order_issues")
}

model Notification {
  id        String    @id @default(cuid())
  userId    String    @map("user_id")
  type      String
  message   String
  linkUrl   String?   @map("link_url")
  readAt    DateTime? @map("read_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, readAt])
  @@map("notifications")
}

model Review {
  id         String   @id @default(cuid())
  programId  String   @map("program_id")
  // @MX:NOTE: SPEC-013 — 작성자(reviewer). userId 유지(기존 호환), User.reviewsAuthored와 연결.
  userId     String   @map("user_id")
  // @MX:NOTE: SPEC-013 — 피평가자(reviewee). 작성자 역할 vs 피평가자 역할로 방향 도출(안 A).
  // 팬이 쓰면 revieweeId=크리에이터, 크리에이터가 쓰면 revieweeId=팬. 양방향·다대다 평가 가능.
  // 레거시 호환을 위해 nullable 허용 — 신규 리뷰는 항상 채워진다(createReview에서 보장).
  revieweeId String?  @map("reviewee_id")
  rating     Int
  comment    String?
  tags       String[] @default([])
  createdAt  DateTime @default(now()) @map("created_at")

  program  Program @relation(fields: [programId], references: [id], onDelete: Cascade)
  reviewer User    @relation("ReviewReviewer", fields: [userId], references: [id], onDelete: Cascade)
  reviewee User?   @relation("ReviewReviewee", fields: [revieweeId], references: [id], onDelete: Cascade)

  // @MX:NOTE: SPEC-013 — "한 프로그램에서 한 작성자가 한 피평가자에 대해 1개" → 양방향·다대다에서 중복 차단.
  @@unique([programId, userId, revieweeId])
  @@index([programId])
  @@index([revieweeId])
  @@map("reviews")
}

// @MX:NOTE: CommunityPost — member/participant-only board (SPEC-007).
model CommunityPost {
  id               String   @id @default(cuid())
  creatorProfileId String   @map("creator_profile_id")
  authorId         String   @map("author_id")
  title            String
  content          String
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")

  creatorProfile CreatorProfile @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)
  author         User           @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([creatorProfileId, createdAt])
  @@map("community_posts")
}

// @MX:NOTE: Bookmark — 팬의 관심 작가 북마크 (PRD §7). @@unique로 중복 북마크 차단.
model Bookmark {
  id               String   @id @default(cuid())
  fanId            String   @map("fan_id")
  creatorProfileId String   @map("creator_profile_id")
  createdAt        DateTime @default(now()) @map("created_at")

  fan            User           @relation(fields: [fanId], references: [id], onDelete: Cascade)
  creatorProfile CreatorProfile @relation(fields: [creatorProfileId], references: [id], onDelete: Cascade)

  @@unique([fanId, creatorProfileId])
  @@index([fanId])
  @@map("bookmarks")
}
